[gd_scene load_steps=43 format=3 uid="uid://btdbdtx3yqq0p"]

[ext_resource type="Script" path="res://Scripts/Weapons/weapon_pickup.gd" id="1_tgrtx"]
[ext_resource type="Texture2D" uid="uid://3o0x3k0jk0p6" path="res://Art/Weapons/Sword-Sheet.png" id="2_mskar"]
[ext_resource type="Texture2D" uid="uid://spqtwoho2466" path="res://Art/Weapons/axe hover-Sheet.png" id="3_vdvk4"]
[ext_resource type="Texture2D" uid="uid://b3pu6hmpddn18" path="res://Art/Weapons/Wand Hover-Sheet.png" id="5_c4ib7"]
[ext_resource type="Texture2D" uid="uid://dkfc6oayj5tit" path="res://Art/Weapons/Spear_Hover-Sheet.png" id="5_o31fv"]
[ext_resource type="FontFile" uid="uid://dp1ddppe36c3u" path="res://Art/test_stuff/GrapeSoda.ttf" id="8_5avup"]
[ext_resource type="Texture2D" uid="uid://dcgih1icg2ga4" path="res://Art/HUD/eKey_HUD.png" id="9_ffttb"]
[ext_resource type="Texture2D" uid="uid://bywk4aonfj1po" path="res://Art/HUD/vKey_HUD.png" id="10_t7r76"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xxc4"]
radius = 25.2982

[sub_resource type="AtlasTexture" id="AtlasTexture_553ue"]
atlas = ExtResource("3_vdvk4")
region = Rect2(0, 0, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_u04x5"]
atlas = ExtResource("3_vdvk4")
region = Rect2(35, 0, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc576"]
atlas = ExtResource("3_vdvk4")
region = Rect2(70, 0, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp65p"]
atlas = ExtResource("3_vdvk4")
region = Rect2(0, 72, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7p3m"]
atlas = ExtResource("3_vdvk4")
region = Rect2(35, 72, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl3g8"]
atlas = ExtResource("3_vdvk4")
region = Rect2(70, 72, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n02q"]
atlas = ExtResource("3_vdvk4")
region = Rect2(0, 144, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbvia"]
atlas = ExtResource("5_o31fv")
region = Rect2(0, 0, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6rhg"]
atlas = ExtResource("5_o31fv")
region = Rect2(32, 0, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecf76"]
atlas = ExtResource("5_o31fv")
region = Rect2(64, 0, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1lvw"]
atlas = ExtResource("5_o31fv")
region = Rect2(96, 0, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ys1y"]
atlas = ExtResource("5_o31fv")
region = Rect2(0, 102, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y7d2"]
atlas = ExtResource("5_o31fv")
region = Rect2(32, 102, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltbhm"]
atlas = ExtResource("5_o31fv")
region = Rect2(64, 102, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_6viy7"]
atlas = ExtResource("5_o31fv")
region = Rect2(96, 102, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk0an"]
atlas = ExtResource("5_o31fv")
region = Rect2(0, 204, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ff5r"]
atlas = ExtResource("5_o31fv")
region = Rect2(32, 204, 32, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ac3t"]
atlas = ExtResource("2_mskar")
region = Rect2(0, 0, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssxpu"]
atlas = ExtResource("2_mskar")
region = Rect2(35, 0, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt1r2"]
atlas = ExtResource("2_mskar")
region = Rect2(70, 0, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa0ob"]
atlas = ExtResource("2_mskar")
region = Rect2(0, 72, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdnta"]
atlas = ExtResource("2_mskar")
region = Rect2(35, 72, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0jij"]
atlas = ExtResource("2_mskar")
region = Rect2(70, 72, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7vor"]
atlas = ExtResource("2_mskar")
region = Rect2(0, 144, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn5t3"]
atlas = ExtResource("2_mskar")
region = Rect2(35, 144, 35, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_yca12"]
atlas = ExtResource("5_c4ib7")
region = Rect2(0, 0, 20, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqftc"]
atlas = ExtResource("5_c4ib7")
region = Rect2(20, 0, 20, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7vud"]
atlas = ExtResource("5_c4ib7")
region = Rect2(40, 0, 20, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7426"]
atlas = ExtResource("5_c4ib7")
region = Rect2(0, 65, 20, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwgrl"]
atlas = ExtResource("5_c4ib7")
region = Rect2(20, 65, 20, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uiwy"]
atlas = ExtResource("5_c4ib7")
region = Rect2(40, 65, 20, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjeob"]
atlas = ExtResource("5_c4ib7")
region = Rect2(0, 130, 20, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_cscrr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_553ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u04x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc576")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp65p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7p3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl3g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n02q")
}],
"loop": true,
"name": &"axe_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbvia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6rhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecf76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1lvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ys1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y7d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltbhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6viy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk0an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ff5r")
}],
"loop": true,
"name": &"spear_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ac3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssxpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt1r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa0ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdnta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0jij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7vor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn5t3")
}],
"loop": true,
"name": &"sword_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yca12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqftc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7vud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7426")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwgrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uiwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjeob")
}],
"loop": true,
"name": &"wand_idle",
"speed": 5.0
}]

[node name="Weapon_Pickup" type="Area2D" groups=["Weapon_Pickup"]]
collision_layer = 16
script = ExtResource("1_tgrtx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_1xxc4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cscrr")
animation = &"wand_idle"
frame_progress = 0.135939

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -74.0
offset_top = -72.0
offset_right = -34.0
offset_bottom = -32.0
metadata/_edit_use_anchors_ = true

[node name="PickupText" type="Label" parent="Options"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.45
anchor_top = -0.125
anchor_right = -0.15
anchor_bottom = -0.05
offset_left = 8.0
offset_top = 8.0
offset_right = 60.0
offset_bottom = 31.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("8_5avup")
theme_override_font_sizes/font_size = 25
text = "Pickup
"
metadata/_edit_use_anchors_ = true

[node name="E_Key" type="Sprite2D" parent="Options/PickupText"]
texture_filter = 1
position = Vector2(32, 37)
scale = Vector2(0.75, 0.75)
texture = ExtResource("9_ffttb")

[node name="DescText" type="Label" parent="Options"]
texture_filter = 1
layout_mode = 0
offset_left = 74.0
offset_top = 3.0
offset_right = 187.0
offset_bottom = 29.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("8_5avup")
theme_override_font_sizes/font_size = 25
text = "Description"

[node name="D_Key" type="Sprite2D" parent="Options/DescText"]
texture_filter = 1
position = Vector2(54, 37)
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_t7r76")

[node name="Description" type="Control" parent="Options"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 52.0
offset_top = -32.0
offset_right = 92.0
offset_bottom = 8.0

[node name="Label" type="Label" parent="Options/Description"]
layout_mode = 0
offset_left = -180.0
offset_top = -24.0
offset_right = 252.0
offset_bottom = 51.0
text = " A rusted old sword. The metal is corroded from years of wear and tear, but is still usable. There's an engraving on it, that you can read as \"A.A.D\""
vertical_alignment = 3
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
